# flashcards-windows

./: .gitignore  README.md  ai-sidecar.blob  econ  loadEnv.ps1  moodboard-tile.html  package.json  pnpm-lock.yaml  sticky-note.html  vite.config.ts
.github/workflows/: release.yaml
scripts/: release-tui.js
server/: ai-sidecar.mjs
server/mastra/: agent.mjs  context.mjs  env.mjs  memory.mjs
server/mastra/tools/: device-control.mjs  index.mjs  summarize-workspace.mjs
src/: AddNoteView.tsx  AppErrorBoundary.tsx  CalendarView.tsx  MoodboardPanel.tsx  MoodboardTileWindow.tsx  NoteMdEditor.tsx  NoteMdEditorImpl.tsx  PomodoroTimer.tsx  SpotifyPanel.tsx  StickyNote.tsx  StudyView.tsx  ThemeSettings.tsx  UpdateChecker.tsx  action-search-bar.tsx  index.css  main.tsx  moodboard-tile-main.tsx  sticky-note-main.tsx  supabase-js.js  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  link_preview.rs  main.rs
src/lib/: fsrs.ts  moodboard-link.ts  moodboard-storage.ts
supabase/migrations/: 20250602120000_calendar_events.sql
supabase/supabase/.temp/: pooler-url  project-ref
